# Magic_Mirror

./: Design Specifications.docx  README.md  UML Design Specifications.docx  UserSystem.h
Magic_Mirror/: CMakeLists.txt  Magic_Mirror.pro  README  README.md
Magic_Mirror/Bootstrapper/: MainWindow.cpp  MainWindow.h  main.cpp
Magic_Mirror/Date_and_Time/: AnalogClock.cpp  AnalogClock.h  DigitalClock.cpp  DigitalClock.h  clock.cpp  clock.h  clock.pro  main.cpp
Magic_Mirror/Date_and_Time/AddEventWidget/: AddEvent.cpp  AddEvent.h
Magic_Mirror/Date_and_Time/CalendarWidget/: CalendarWidget.cpp  CalendarWidget.h  calendarWidget.cpp  calendarWidget.h  calendarWidget.pro  event.cpp  event.h
Magic_Mirror/Date_and_Time/ClockWidget/: ClockWidget.cpp  ClockWidget.h
Magic_Mirror/Doc/: Group Project Stage #1.docx
Magic_Mirror/MailClient/: Email.cpp  Email.h  Inbox.cpp  Inbox.h  MailClient.cpp  MailClient.h
Magic_Mirror/News/: APIRequest.cpp  APIRequest.h  articleData.cpp  articleData.h  imgDownloader.cpp  imgDownloader.h  newsWindow.cpp  newsWindow.h
Magic_Mirror/News/NewsWidget/: NewsWidget.cpp  NewsWidget.h
Magic_Mirror/User_System/: User.cpp  User.h  UserSystem.cpp  UserSystem.h
Magic_Mirror/User_System/AdminAccountInfoWidget/: AdminAccountInfo.cpp  AdminAccountInfo.h
Magic_Mirror/User_System/CreateUserWidget/: CreateUser.cpp  CreateUser.h
Magic_Mirror/User_System/LoginPopupWidget/: LoginPopup.cpp  LoginPopup.h
Magic_Mirror/User_System/UserAccountInfoWidget/: UserAccountInfo.cpp  UserAccountInfo.h
Magic_Mirror/User_System/UserSystemWidget/: UserSystemWidget.cpp  UserSystemWidget.h
Magic_Mirror/Utils/: ClickableLabel.cpp  ClickableLabel.h
Magic_Mirror/Weather/: getWeather.cpp  getWeather.h  main.cpp
Magic_Mirror/Weather/WeatherWidget/: WeatherWidget.cpp  WeatherWidget.h
Magic_Mirror/Webcam/: Camera.cpp  Camera.h
Magic_Mirror/useraccounts/: John.json  admin.json  user1.json
gc/: Makefile  calendarWidget.cpp  calendarWidget.h  calendarWidget.pro  event.cpp  event.h  m  main.cpp  moc_calendarWidget.cpp
newsWidget/: APIRequest.cpp  APIRequest.h  CMakeLists.txt  articleData.cpp  main.cpp
time/: Makefile  clock.cpp  clock.h  clock.pro  m  main.cpp
user_system/: CMakeLists.txt  User.cpp  User.h  UserSystem.cpp  main.cpp
user_system/useraccounts/: acavacas.json  gbush.json  pmeijer.json
useraccounts/: rfoster.json
weatherWidget/: getWeather.cpp  getWeather.h
